// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/PasswordField default 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="password"
    />
    <div
      className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
    >
      <button
        aria-label="Toggle password visibility"
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="m0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI/PasswordField styled 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
    data-shrink={false}
    htmlFor="password"
  >
    Password
    <span
      className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
    >
       
      *
    </span>
  </label>
  <div
    className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="PrivateNotchedOutline-root-131 MuiOutlinedInput-notchedOutline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="PrivateNotchedOutline-legend-132"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      autoComplete="current-password"
      className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
      disabled={false}
      id="password"
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="password"
    />
    <div
      className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
    >
      <button
        aria-label="Toggle password visibility"
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="m0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI/PasswordStrengthMeter default 1`] = `
Array [
  <div
    aria-valuenow={0}
    className="MuiLinearProgress-root makeStyles-progress-171 MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-weak-172 MuiLinearProgress-bar1Determinate"
      style={
        Object {
          "transform": "translateX(-100%)",
        }
      }
    />
  </div>,
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    Password strength: 
    weak
  </p>,
]
`;

exports[`Storyshots UI/PasswordStrengthMeter fair 1`] = `
Array [
  <div
    aria-valuenow={50}
    className="MuiLinearProgress-root makeStyles-progress-283 MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-fair-285 MuiLinearProgress-bar1Determinate"
      style={
        Object {
          "transform": "translateX(-50%)",
        }
      }
    />
  </div>,
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    Password strength: 
    fair
  </p>,
]
`;

exports[`Storyshots UI/PasswordStrengthMeter good 1`] = `
Array [
  <div
    aria-valuenow={75}
    className="MuiLinearProgress-root makeStyles-progress-339 MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-good-342 MuiLinearProgress-bar1Determinate"
      style={
        Object {
          "transform": "translateX(-25%)",
        }
      }
    />
  </div>,
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    Password strength: 
    good
  </p>,
]
`;

exports[`Storyshots UI/PasswordStrengthMeter strong 1`] = `
Array [
  <div
    aria-valuenow={100}
    className="MuiLinearProgress-root makeStyles-progress-395 MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-strong-399 MuiLinearProgress-bar1Determinate"
      style={
        Object {
          "transform": "translateX(0%)",
        }
      }
    />
  </div>,
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    Password strength: 
    strong
  </p>,
]
`;

exports[`Storyshots UI/PasswordStrengthMeter weak 1`] = `
Array [
  <div
    aria-valuenow={25}
    className="MuiLinearProgress-root makeStyles-progress-227 MuiLinearProgress-colorPrimary MuiLinearProgress-determinate"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-weak-228 MuiLinearProgress-bar1Determinate"
      style={
        Object {
          "transform": "translateX(-75%)",
        }
      }
    />
  </div>,
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    Password strength: 
    weak
  </p>,
]
`;
